--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -10,10 +9,11 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-  <!-- Здесь будет ваш контент -->
-  <script src="app.js"></script>
   <div id="notation"></div>
   <div id="piano"></div>
   <div id="timer">30</div>
+  
+  <!-- Подключаем app.js в самом конце, после всех элементов -->
+  <script src="app.js"></script>
 </body>
 </html>
