--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <script src="https://unpkg.com/vexflow/releases/vexflow-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.39/Tone.min.js"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
+
 </head>
 <body>
   <div id="notation"></div>
