Вернули статическую клавиатуру и увеличили ее размер

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -10,9 +11,23 @@
 </head>
 <body>
     <div id="notation"></div>
+    <div id="piano-container">
+        <div id="piano">
+            <button class="white-key">C</button>
+            <button class="black-key">C#</button>
+            <button class="white-key">D</button>
+            <button class="black-key">D#</button>
+            <button class="white-key">E</button>
+            <button class="white-key">F</button>
+            <button class="black-key">F#</button>
+            <button class="white-key">G</button>
+            <button class="black-key">G#</button>
+            <button class="white-key">A</button>
+            <button class="black-key">A#</button>
+            <button class="white-key">B</button>
+        </div>
+    </div>
     <div id="timer">30</div>
-    <div id="piano"></div>
-    
     <script src="app.js"></script>
 </body>
 </html>
