Добавлены кнопки К1 и К2, счетчик октавы перемещен выше кнопок

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <div id="notation"></div>
     <div id="controls">
+        <span id="current-octave">4</span> <!-- Счетчик октавы выше кнопок -->
         <button id="octave-down">-</button>
-        <span id="current-octave">4</span>
         <button id="octave-up">+</button>
-        <button>Кнопка 1</button>
-        <button>Кнопка 2</button>
+        <button id="button1">К1</button>
+        <button id="button2">К2</button>
     </div>
     <div id="piano-container">
         <div id="piano"></div>
