Перемещен счетчик времени над кнопками управления октавами

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
     <div id="notation"></div>
     <div id="controls">
-        <span id="current-octave">4</span> <!-- Счетчик октавы выше кнопок -->
+        <div id="timer">30</div> <!-- Таймер перемещен сюда -->
         <button id="octave-down">-</button>
+        <span id="current-octave">4</span>
         <button id="octave-up">+</button>
         <button id="button1">К1</button>
         <button id="button2">К2</button>
@@ -21,7 +22,6 @@
     <div id="piano-container">
         <div id="piano"></div>
     </div>
-    <div id="timer">30</div>
     <script src="app.js"></script>
 </body>
 </html>
