Изменен размер нотного стана, добавлена кнопка 'Стоп' и увеличена кнопка 'Старт'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div id="notation"></div>
     <div id="start-container">
         <button id="start-button">Старт</button>
-        <div id="timer">30</div> <!-- Таймер и кнопка "Старт" ближе к нотному стану -->
+        <button id="stop-button">Стоп</button>
+        <div id="timer">30</div>
     </div>
     <div id="piano-container">
         <div id="controls">
